--- a/src/lists/Houses.css
+++ b/src/lists/Houses.css
@@ -1,4 +1,9 @@
 .HorizontalflexHouse{
     display: flex;
+    max-width: 65vw;
+    height: 12rem;
     flex-direction: row;
+    overflow: auto;
+    white-space: nowrap; 
+    border: 1px solid #f52323;
 }
