--- a/src/pages/MainPage.css
+++ b/src/pages/MainPage.css
@@ -4,10 +4,11 @@
     background-repeat: no-repeat;
     background-position: center; 
     background-attachment: fixed; 
+    width: 99vw;
 }
 
-.HotelContainer{
-    margin-top: 10px;
+.Container{
+    margin: 10px;
     position: relative;
     width: 100%;
     height: auto;
@@ -25,3 +26,10 @@
     z-index: 0; 
 }
 
+
+.logo {
+    font-family: "Press Start 2P", system-ui;
+    font-weight: 400;
+    font-style: normal;
+    color: aliceblue;
+  }
